Add transition between pages

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-i18next": "^11.4.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-tiger-transition": "^4.1.2",
+    "react-transition-group": "^4.4.1",
     "recompose": "^0.30.0",
     "styled-components": "^5.1.0"
   },
