--- a/package.json
+++ b/package.json
@@ -45,5 +45,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "cypress-firebase": "^1.2.0",
+    "firebase-admin": "^8.12.1"
   }
 }
